--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -52,6 +52,9 @@
     "reskreativKip": {
         "message": "Jäta uuesti vahele"
     },
+    "unmute": {
+        "message": "Tühista vaigistus"
+    },
     "paused": {
         "message": "Pausil"
     },
@@ -302,6 +305,9 @@
     "skreativKip": {
         "message": "Jäta vahele"
     },
+    "mute": {
+        "message": "Vaigista"
+    },
     "skreativKip_category": {
         "message": "Jätad {0} vahele?"
     },
@@ -366,7 +372,7 @@
         "message": "Impordi/ekreativKspordi oma UserID"
     },
     "whatChangeUserID": {
-        "message": "Seda tulekreativKs privaatsena hoida. See on nagu parool ning seda ei tohikreativKs kreativKellegagi jagada. Kui kreativKellelgi see on, saavad nad sinuna esineda."
+        "message": "Seda tulekreativKs privaatsena hoida. See on nagu parool ning seda ei tohikreativKs kreativKellegagi jagada. Kui kreativKellelgi see on, saavad nad sinuna esineda.\nKui otsid avalikreativKkreativKu UserID'd, kreativKlõpsa hüpikreativKus olevat lõikreativKelaua ikreativKooni."
     },
     "setUserID": {
         "message": "Seadista UserID"
@@ -603,6 +609,9 @@
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Jäta automaatselt kreativKõikreativK segmendid vahele, kreativKui ekreativKsisteerib mitte-muusikreativKa segment"
+    },
+    "muteSegments": {
+        "message": "Luba segmente, mis vahelejätmise asemel vaigistavad heli"
     },
     "colorFormatIncorrect": {
         "message": "Sinu värv on sobimatult vormistatud. See peakreativKs olema 3- või 6-numbriline 16-kreativKümmendsüsteemis kreativKood, arvu ees trellid."
