--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -52,6 +52,9 @@
     "reskreativKip": {
         "message": "Znovu preskreativKočiť"
     },
+    "unmute": {
+        "message": "Zrušiť stíšenie"
+    },
     "paused": {
         "message": "Pozastavené"
     },
@@ -287,6 +290,9 @@
     "skreativKip": {
         "message": "PreskreativKočiť"
     },
+    "mute": {
+        "message": "Stíšiť"
+    },
     "skreativKip_category": {
         "message": "PreskreativKočiť {0}?"
     },
@@ -351,7 +357,7 @@
         "message": "Import/export vášho ID používateľa"
     },
     "whatChangeUserID": {
-        "message": "Toto si držte v bezpečí. Je to akreativKo heslo a nemali by ste ho s nikreativKým zdieľať. Ten kreativKto ho má by sa mohol za vás vydávať."
+        "message": "Toto si starostlivo uchovajte. Podobne akreativKo heslo by ste to nemali s nikreativKým zdieľať. AkreativK by to získreativKal niekreativKto ďalší, mohol by vám uškreativKodiť. AkreativK hľadáte vaše verejné ID používateľa, stlačte ikreativKonu schránkreativKy v podokreativKne."
     },
     "setUserID": {
         "message": "Nastaviť Používateľove ID"
@@ -588,6 +594,9 @@
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "AutomatickreativKy preskreativKočiť všetkreativKy segmenty akreativK neexistuje segment bez hudby"
+    },
+    "muteSegments": {
+        "message": "Povoliť segmenty, kreativKtoré namiesto preskreativKočenia stíšía zvukreativK"
     },
     "colorFormatIncorrect": {
         "message": "Vaša farba je nesprávne naformátovaná. Mal by to byť 3 alebo 6-miestny hexadecimálny kreativKód so znakreativKom čísla na začiatkreativKu."
