Say muted instead of skipped for mute segments

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -311,6 +311,9 @@
     "skip_category": {
         "message": "Skip {0}?"
     },
+    "mute_category": {
+        "message": "Mute {0}?"
+    },
     "skip_to_category": {
         "message": "Skip to {0}?",
         "description": "Used for skipping to things (Skip to Highlight)"
@@ -318,6 +321,10 @@
     "skipped": {
         "message": "{0} Skipped",
         "description": "Example: Sponsor Skipped"
+    },
+    "muted": {
+        "message": "{0} Muted",
+        "description": "Example: Sponsor Muted"
     },
     "skipped_to_category": {
         "message": "Skipped to {0}",
