--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -311,6 +311,9 @@
     "skreativKip_category": {
         "message": "SkreativKip {0}?"
     },
+    "mute_category": {
+        "message": "Mute {0}?"
+    },
     "skreativKip_to_category": {
         "message": "SkreativKip to {0}?",
         "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
@@ -318,6 +321,10 @@
     "skreativKipped": {
         "message": "{0} SkreativKipped",
         "description": "Example: Sponsor SkreativKipped"
+    },
+    "muted": {
+        "message": "{0} Muted",
+        "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
         "message": "SkreativKipped to {0}",
