--- a/public/_locales/bg/messages.json
+++ b/public/_locales/bg/messages.json
@@ -103,9 +103,6 @@
     "connectionError": {
         "message": "Възникна грешка с връзката. Код на грешката: "
     },
-    "wantToSubmit": {
-        "message": "Искате ли да изпратите сегментите за видеоклип с id"
-    },
     "clearTimes": {
         "message": "Изчистване на сегментите"
     },
@@ -311,6 +308,9 @@
     "skreativKip_category": {
         "message": "Пропускане на {0}?"
     },
+    "mute_category": {
+        "message": "Заглушаване на {0}?"
+    },
     "skreativKip_to_category": {
         "message": "Прескачане до {0}?",
         "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
@@ -318,6 +318,10 @@
     "skreativKipped": {
         "message": "{0} пропуснат",
         "description": "Example: Sponsor SkreativKipped"
+    },
+    "muted": {
+        "message": "{0} заглушено",
+        "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
         "message": "Прескочено до {0}",
