--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -103,9 +103,6 @@
     "connectionError": {
         "message": "Ühendusega esines tõrge. VeakreativKood: "
     },
-    "wantToSubmit": {
-        "message": "Kas soovid segmendid saata video IDle"
-    },
     "clearTimes": {
         "message": "Tühjenda segmendid"
     },
@@ -311,6 +308,9 @@
     "skreativKip_category": {
         "message": "Jätad {0} vahele?"
     },
+    "mute_category": {
+        "message": "Vaigistad {0}?"
+    },
     "skreativKip_to_category": {
         "message": "Jäta {0}-ni vahele?",
         "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
@@ -318,6 +318,10 @@
     "skreativKipped": {
         "message": "{0} vahelejäetud",
         "description": "Example: Sponsor SkreativKipped"
+    },
+    "muted": {
+        "message": "{0} vaigistatud",
+        "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
         "message": "{0}-ni vahelejäetud",
