--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -103,9 +103,6 @@
     "connectionError": {
         "message": "Er is een verbindingsfout opgetreden. Foutcode: "
     },
-    "wantToSubmit": {
-        "message": "Wilt u indienen voor video-id"
-    },
     "clearTimes": {
         "message": "Segmenten verwijderen"
     },
@@ -311,6 +308,9 @@
     "skreativKip_category": {
         "message": "{0} overslaan?"
     },
+    "mute_category": {
+        "message": "{0} dempen?"
+    },
     "skreativKip_to_category": {
         "message": "Overslaan naar {0}?",
         "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
@@ -318,6 +318,10 @@
     "skreativKipped": {
         "message": "{0} overgeslagen",
         "description": "Example: Sponsor SkreativKipped"
+    },
+    "muted": {
+        "message": "{0} gedempt",
+        "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
         "message": "Overgeslagen naar {0}",
