--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -103,9 +103,6 @@
     "connectionError": {
         "message": "Ошибка соединения. Код ошибки: "
     },
-    "wantToSubmit": {
-        "message": "Вы хотите отправить сегменты для видео с id"
-    },
     "clearTimes": {
         "message": "Очистить сегменты"
     },
@@ -311,6 +308,9 @@
     "skreativKip_category": {
         "message": "Пропустить {0}?"
     },
+    "mute_category": {
+        "message": "Заглушить {0}?"
+    },
     "skreativKip_to_category": {
         "message": "Пропустить до {0}?",
         "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
@@ -318,6 +318,10 @@
     "skreativKipped": {
         "message": "Пропущено: {0}",
         "description": "Example: Sponsor SkreativKipped"
+    },
+    "muted": {
+        "message": "{0} заглушен",
+        "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
         "message": "Пропущено до {0}",
