--- a/public/_locales/uk/messages.json
+++ b/public/_locales/uk/messages.json
@@ -309,7 +309,7 @@
         "message": "Пропустити {0}?"
     },
     "mute_category": {
-        "message": "Заглушити {0}?"
+        "message": "Вимкнути звук {0}?"
     },
     "skreativKip_to_category": {
         "message": "Пропустить до {0}?",
@@ -320,7 +320,7 @@
         "description": "Example: Sponsor SkreativKipped"
     },
     "muted": {
-        "message": "{0} Заглушений",
+        "message": "{0} Вимкнений звук",
         "description": "Example: Sponsor Muted"
     },
     "skreativKipped_to_category": {
